swan_AmazonFiles/objects/swan_AmazonFile__c/swan_AmazonFile__c.object-meta.xml
<CustomObject>
    <label>Amazon File</label>
    <nameField>
        <label>Amazon File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amazon Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>