swan_AmazonFiles/objects/swan_AmazonFile__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>