swan_AmazonFiles/objects/swan_AmazonFile__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>