swan_AmazonFiles/objects/swan_AmazonFile__c/fields/MIME__c.field-meta.xml
<CustomField>
    <fullName>MIME__c</fullName>
    <label>MIME</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>