swan_AmazonFiles/objects/swan_AmazonFile__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>