swan_AmazonFiles/objects/swan_AmazonFile__c/fields/UploadedById__c.field-meta.xml
<CustomField>
    <fullName>UploadedById__c</fullName>
    <label>Uploaded By Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>