swan_AmazonFiles/objects/swan_AmazonFile__c/fields/UploadedByName__c.field-meta.xml
<CustomField>
    <fullName>UploadedByName__c</fullName>
    <label>Uploaded By Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>